--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProjectNiral">
         <activity
-            android:name=".MainActivity3"
+            android:name=".Signin"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -27,7 +27,7 @@
             android:name=".Mainalmain"
             android:exported="false" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".Signup"
             android:exported="false" />
     </application>
 
