fixed befor save via AppDataBased

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProjectNiral">
-        <activity
-            android:name=".TaskActivity"
-            android:exported="false" />
+
         <activity
             android:name=".addAsigment"
             android:exported="false" />
@@ -27,15 +25,19 @@
         <activity
             android:name=".ChatActivity"
             android:exported="false" />
-        <activity
-            android:name=".NotesActivity"
-            android:exported="false" />
+
         <activity
             android:name=".Mainalmain"
             android:exported="false" />
         <activity
             android:name=".Signin"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
